@@ -1,3 +1,10 @@
+2007-02-22  Ross Burton  <ross@openedhand.com>
+
+	* applets/windowselector/Makefile.am:
+	* applets/windowselector/windowselector.c:
+	* applets/windowselector/mb-applet-windowselector.png:
+	Ship a window selector icon.
+
 2007-02-01  Matthew Allum  <mallum@openedhand.com>
 
 	* applets/clock/clock.c: 
